<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.auth.LoginActivity">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:src="@drawable/fo_logo_app"
        android:contentDescription="@string/fo_description_logo" />

    <TextView
        style="@style/TitleMedium"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fo_title_login"/>

    <TextView
        android:id="@+id/title_email"
        style="@style/TitleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="42dp"
        android:text="@string/fo_title_ed_username"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/CustomOutlinedBox"
        android:id="@+id/ed_login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="34dp"
        app:hintEnabled="false"
        android:layout_marginTop="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_login_username"
            style="@style/BodyMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/fo_hint_username"
            android:inputType="textPersonName"
            tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/title_password"
        style="@style/TitleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="34dp"
        android:text="@string/fo_title_ed_password"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ed_login_password"
        style="@style/CustomOutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="34dp"
        android:layout_marginTop="8dp"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:hintEnabled="false"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_login_password"
            style="@style/BodyMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/fo_password"
            android:inputType="textPassword"
            app:passwordToggleEnabled="true"
            tools:ignore="SpeakableTextPresentCheck,VisualLintTextFieldSize,TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="34dp"
        android:layout_marginTop="34dp"
        android:elevation="2dp"
        android:enabled="false"
        android:text="@string/fo_login"
        android:textAllCaps="false"
        tools:ignore="VisualLintButtonSize" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationLoading"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:visibility="gone"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/fo_animation_loading"
        tools:ignore="ImageContrastCheck"
        tools:visibility="visible" />

</LinearLayout>