<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    android:layout_gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/avatar_student"
            android:layout_width="0dp"
            android:layout_height="180dp"
            android:contentDescription="@string/fo_description_avatar"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/fullname_student"
            style="@style/TitleMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="@+id/avatar_student"
            app:layout_constraintStart_toStartOf="@+id/avatar_student"
            app:layout_constraintTop_toBottomOf="@+id/avatar_student"
            tools:text="Tafta Abqary" />

        <TextView
            android:id="@+id/tv_address"
            style="@style/BodySmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/fo_address"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fullname_student" />

        <ImageView
            android:id="@+id/iv_location"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/fo_icon_location"
            android:contentDescription="@string/fo_description_location"
            app:layout_constraintStart_toStartOf="@id/tv_address"
            app:layout_constraintTop_toBottomOf="@id/tv_address" />

        <TextView
            style="@style/BodySmall"
            android:id="@+id/address_student"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="6dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_location"
            app:layout_constraintTop_toTopOf="@+id/iv_location"
            tools:text="Jl. Merdeka No. 123, Jakarta Selatan, DKI Jakarta, 12345" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>